# coinseek

./: .gitignore  Makefile  README.md  accounts.db  dexscreener_bsc_0x47A1EB0b825b73e6A14807BEaECAFef199d5477c_20250212_185541.json  dexscreener_bsc_0x47A1EB0b825b73e6A14807BEaECAFef199d5477c_20250212_190055.json  full_analysis_report.json  ingestion.py  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  trench_bot.py  twitter_analysis.json  twitter_cookies.json  twitter_last_run.json  x_ingestion_test.py
.github/workflows/: pr-ci.yaml  pre-commit.yaml
.next/: app-build-manifest.json  trace
.next/app/: layout.css
.next/cache/: .rscinfo
.next/server/: app-paths-manifest.json  middleware-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
.next/server/app/: page.js  page_client-reference-manifest.js
.next/server/vendor-chunks/: @floating-ui+core@1.6.9.js  @floating-ui+dom@1.6.13.js  @floating-ui+react-dom@2.1.2_react-dom@19.0.0_react@19.0.0__react@19.0.0.js  @floating-ui+utils@0.2.9.js  @radix-ui+primitive@1.1.1.js  @radix-ui+react-accordion@1.2.2_@types+react-dom@19.0.3_@types+react@19.0.8__@types+react@19._w6jrxx7dc2kl2jxcgoa3qofdcy.js  @radix-ui+react-arrow@1.1.1_@types+react-dom@19.0.3_@types+react@19.0.8__@types+react@19.0.8__m7tgsmq3z56fimb7qw62meaajy.js  clsx@2.1.1.js  (+41 more)
backend/: full_analysis_report.json  prompt.txt  pyproject.toml  twitter_analysis_output.json  twitter_cookies.json  twitter_last_run.json
backend/xkl1s/: api.py  deepseek_driver.py  dexscreener.py  full_analysis_report.json  gmgn.py  ingestion.py  ingestion_2.py  trench_bot.py  x_ingestion_test.py
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
src/app/: layout.tsx  page.tsx
src/components/: accordion-section.tsx  hover-cards.tsx  main-bento.tsx  mouse-blob.tsx
xkl1s/: api.py  deepseek_driver.py  gmgn.py  ingestion.py  ingestion_2.py  trench_bot.py  util.py  x_ingestion_test.py
(+728 files in other folders)
