[project]
name = "xkl1s"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.11",
    "black>=24.10.0",
    "curl-cffi>=0.7.4",
    "flake8-pyproject>=1.2.3",
    "humanfriendly>=10.0",
    "mypy>=1.14.1",
    "types-humanfriendly>=10.0.1.20241221",
]

[tool.mypy]
exclude = ".venv"

[tool.black]
line-length = 144
exclude = '.venv'

[tool.flake8]
max-line-length = 144
exclude = '.venv'
