[project]
name = "xkl1s"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.11",
    "black>=25.1.0",
    "curl-cffi>=0.7.4",
    "fastapi>=0.115.7",
    "flake8-pyproject>=1.2.3",
    "humanfriendly>=10.0",
    "mypy>=1.14.1",
    "openai>=1.60.2",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "selenium>=4.28.1",
    "twikit>=2.2.2",
    "types-humanfriendly>=10.0.1.20241221",
    "uvicorn>=0.34.0",
]

[tool.mypy]
exclude = ".venv"
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.black]
line-length = 144
exclude = '.venv'

[tool.flake8]
max-line-length = 144
exclude = '.venv'
